--- a/css/authentication-form.css
+++ b/css/authentication-form.css
@@ -25,18 +25,28 @@ p {
 /* 👇👇👇  ADD YOUR FORM STYLES BENEATH  👇👇👇*/
 
 form {
+  display: flex;
+  flex-direction: column;
   border: 1px solid #a9a9a9;
   padding: 20px;
 }
 
 .subtext {
   color: #a9a9a9;
-  font-weight: unset;
+  font-weight: normal;
+  margin-bottom: 30px;
+  margin-top: 5px;
 }
 
 #sign-in,
 #sign-up {
   width: 100%;
+}
+
+.content {
+  display: flex;
+  flex-flow: row;
+  gap: 20px;
 }
 
 a {
@@ -46,12 +56,16 @@ a {
 
 label {
   font-weight: bold;
+  font-size: 14px;
+  display: block;
 }
 
-input {
+input,
+select {
   width: 100%;
   height: 30px;
   padding: 5px;
+  margin-top: 5px;
 }
 
 input[type="checkbox"],
