--- a/css/ecommerce-page.css
+++ b/css/ecommerce-page.css
@@ -36,12 +36,6 @@ section {
   margin: 0 auto;
 }
 
-.header-content {
-}
-
-.logo-search {
-}
-
 .logo {
   min-width: max-content;
   font-size: 28px;
@@ -68,9 +62,6 @@ section {
 
 .search-bar i {
   color: #8d8ba5;
-}
-
-.options {
 }
 
 .option {
@@ -181,10 +172,96 @@ i.fa-th-list {
 
 /* GRID VIEW STYLES */
 
+.header-content,
+.logo-search,
+.search-bar,
+.options {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  gap: 20px;
+}
+
+.options {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+}
+
+.logo {
+  align-self: center;
+  font-weight: normal;
+}
+
+.options .option {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+  flex-wrap: wrap;
+}
+
+.search-icon,
+.search-bar {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.logo {
+  margin-right: 20px;
+}
+
+/* PAGE LINKS */
+
+.categories {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  font-weight: normal;
+  gap: 20px;
+}
+
+.category {
+  font-weight: normal;
+}
+
+.section-control,
+.view-options,
+h2 {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  font-weight: normal;
+}
+
+.view-options {
+  display: flex;
+  gap: 20px;
+}
+
+.view-option {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/* VIEW OPTIONS */
+
 .grid.products {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+  gap: 20px;
 }
 
 .grid .product {
+  direction: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
   width: 300px;
   padding-bottom: 30px;
 }
@@ -194,15 +271,24 @@ i.fa-th-list {
 }
 
 .grid .product-data {
-  height: 100%;
+  height: 65%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
 }
 
 .grid .product-info {
+  display: flex;
+  flex-direction: column;
   text-align: center;
-  padding: 0 20px 30px;
+  padding: 20px 30px;
 }
 
 .grid .product-action {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: flex-end;
   padding-top: 30px;
   border-top: 1px solid #8d8ba5;
 }
@@ -213,6 +299,8 @@ i.fa-th-list {
 }
 
 .lines .product {
+  display: flex;
+  flex-direction: row;
   padding: 20px;
 }
 
@@ -222,12 +310,25 @@ i.fa-th-list {
 }
 
 .lines .product-data {
+  display: flex;
+  flex-direction: column;
+  margin-left: 20px;
 }
 
 .lines .product-info {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 20px;
+}
+
+.lines .product-name {
+  margin-bottom: 20px;
 }
 
 .lines .product-action {
+  display: flex;
+  flex-direction: row;
+  gap: 40px;
 }
 
 /* LINES-ACTION VIEW */
