--- a/css/ecommerce-page.css
+++ b/css/ecommerce-page.css
@@ -256,8 +256,8 @@ h2 {
 }
 
 .grid .product {
-  direction: flex;
-  flex-direction: row;
+  display: flex;
+  flex-direction: column;
   justify-content: space-evenly;
   width: 300px;
   padding-bottom: 30px;
@@ -346,6 +346,7 @@ h2 {
 .lines-action .product {
   display: flex;
   flex-direction: row;
+  padding: 20px;
 }
 
 .lines-action .product-image-wrapper {
@@ -370,7 +371,20 @@ h2 {
 .lines-action .product-action {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
   border-left: 1px solid #8d8ba5;
   padding-left: 30px;
   min-width: 200px;
+}
+
+.lines-action .product-name {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 30px;
+}
+
+.lines-action .buy-btn {
+  width: 69.78px;
+  height: 38px;
 }
